<resources>
    <string name="app_name">PicTag App for Android</string>
    <string name="pictag">PicTag</string>
    <string name="aaron_canty_nmtu_year_3_nr00206055">Aaron Canty\nMTU Year 3\nR00206055</string>
    <string name="title_activity_main">Main_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="appInfo">An online image space.\n\nNo need to have any photos on your phone anymore\n-save valuable space!\n\nTake a look at the gallery.</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="about_app_author">About App Author</string>
    <string name="title_activity_about_author">about_author</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="exit">Exit</string>
    <string name="thanks_for_everything_samreen_from_modular_programming_in_first_year_to_mobile_devices_this_year_all_the_best_for_the_future_take_care_aaron">Thanks for everything Samreen, from modular programming in first year to mobile devices this year. This module was definitely one of the coolest 😁!\n\nAll the best for the future and\nHappy Holidays!\n\nTake care,\nAaron</string>
    <string name="xmas_tree">xmas tree</string>
    <string name="tags">Tags:</string>
    <string name="pic">Pic:</string>
    <string name="quit_app">Quit App</string>
    <string name="about_click_me">About -- Click Me</string>
    <string name="add_data">Add Data</string>
    <string name="description">Description</string>
    <string name="Tags">Tags</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="thanks">Thanks</string>
    <string name="about_and_justification">I designed this app to investigate and enhance my knowledge of the Firebase Platform, specifically the Realtime Database.\nIn the image gallery, each photo is pulled from the database, along with the pseudo \'metadata\'. Ideally I wanted to have an image in the phone\'s folder / camera, and upload it to Firebase alongside the faux metadata and from there, perform basic CRUD options.\nAndroid Studio &amp; the Java variant it uses made this too tricky for me to do this iteration, but this app seems like a project I could be at for a while, maybe for the summer to keep my coding skills up.</string>
    <string name="student_details">AARON CANTY\nMUNSTER TECHNOLOGICAL UNIVERSITY\nR00206055</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="edit_tags">EDIT TAGS</string>
</resources>